# SimpleEnigma

./: CMakeLists.txt  CMakePresets.json  README.md  temp.sh
include/: CipherMap.h  Enigma.h  Plugboard.h  Reflector.h  Rotor.h  StringUtil.h
resources/: Reflector_1  Reflector_2  Reflector_3  Rotor_1  Rotor_2  Rotor_3  Rotor_4  Rotor_5
src/: CipherMap.cpp  Enigma.cpp  Main.cpp  Plugboard.cpp  Reflector.cpp  Rotor.cpp  StringUtil.cpp
